# eol-matrix

./: AGENTS.md  README.md  pyproject.toml
docs/api/: endoflife.date-v1.md  pypi.md
docs/specs/: matrix.py  spec_v1.md  spec_v2.md
src/eol_matrix/: endoflife_client.py  main.py  matrix.py  types.py  versions.py
src/eol_matrix/runtimes/: __init__.py  base.py  python.py
tests/: test_matrix.py  test_versions.py
tests/endoflife/: test_endoflife_client.py
tests/runtimes/: test_python.py
